Manually copying development notebooks for execution for now

--- a/site/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb
+++ b/site/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97710f2a",
+   "id": "b6fa2ac0",
    "metadata": {},
    "source": [
-    "# ValidMind for model development — 101 Set up the ValidMind Library\n",
+    "# ValidMind for model development 1 — Set up the ValidMind Library\n",
     "\n",
     "Learn how to use ValidMind for your end-to-end model documentation process based on common model development scenarios with our series of four introductory notebooks. This first notebook walks you through the initial setup of the ValidMind Library.\n",
     "\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3bb0ff8",
+   "id": "fe2e0eca",
    "metadata": {},
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
@@ -30,6 +30,7 @@
     "    - [Get your code snippet](#toc3_2_1_)    \n",
     "- [Getting to know ValidMind](#toc4_)    \n",
     "  - [Preview the documentation template](#toc4_1_)    \n",
+    "    - [View model documentation in the ValidMind Platform](#toc4_1_1_)    \n",
     "  - [Explore available tests](#toc4_2_)    \n",
     "- [Upgrade ValidMind](#toc5_)    \n",
     "- [In summary](#toc6_)    \n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d78e3887",
+   "id": "814da22c",
    "metadata": {},
    "source": [
     "<a id='toc1_'></a>\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f40a5e0a",
+   "id": "4b966a95",
    "metadata": {},
    "source": [
     "<a id='toc2_'></a>\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12af6ba2",
+   "id": "87936431",
    "metadata": {},
    "source": [
     "<a id='toc2_1_'></a>\n",
@@ -94,14 +95,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f9cc87c",
+   "id": "cb9f8dc1",
    "metadata": {},
    "source": [
     "<a id='toc2_2_'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
-    "If you haven't already seen our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html), we recommend you begin by exploring the available resources in this section. There, you can learn more about documenting models, find code samples, or read our developer reference.\n",
+    "If you haven't already seen our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html), we recommend you begin by exploring the available resources in this section. There, you can learn more about documenting models and running tests, as well as find code samples and our Python Library API reference.\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>For access to all features available in this notebook, create a free ValidMind account.</b></span>\n",
     "<br></br>\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c5cde0",
+   "id": "a0d16aca",
    "metadata": {},
    "source": [
     "<a id='toc2_3_'></a>\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c06378f",
+   "id": "215d62a7",
    "metadata": {},
    "source": [
     "<a id='toc3_'></a>\n",
@@ -173,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8883bbc3",
+   "id": "827eb6bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "780b6b39",
+   "id": "5e37f9fe",
    "metadata": {},
    "source": [
     "<a id='toc3_2_'></a>\n",
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00f6f07",
+   "id": "48eb92b3",
    "metadata": {},
    "source": [
     "   - Documentation template: `Binary classification`\n",
@@ -233,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f22e91d",
+   "id": "a58d951f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3186121",
+   "id": "99cf2df8",
    "metadata": {},
    "source": [
     "<a id='toc4_'></a>\n",
@@ -280,11 +281,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ab4cac",
+   "id": "819a40bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "vm.preview_template()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf63d701",
+   "metadata": {},
+   "source": [
+    "<a id='toc4_1_1_'></a>\n",
+    "\n",
+    "#### View model documentation in the ValidMind Platform\n",
+    "\n",
+    "Next, let's head to the ValidMind Platform to see the template in action:\n",
+    "\n",
+    "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
+    "\n",
+    "2. In the left sidebar, navigate to **Inventory** and select the model you registered for this \"ValidMind for model development\" series of notebooks.\n",
+    "\n",
+    "3. Click on the **Documentation** for your model and note how the structure of the documentation matches our preview above."
    ]
   },
   {
@@ -303,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf76128",
+   "id": "7ccc7776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bede03",
+   "id": "f5d3216d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7bf101",
+   "id": "9b8aa1cc",
    "metadata": {},
    "source": [
     "You may need to restart your kernel after running the upgrade package for changes to be applied."
@@ -355,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207875f2",
+   "id": "65ece5fb",
    "metadata": {},
    "source": [
     "<a id='toc6_'></a>\n",
@@ -364,15 +383,15 @@
     "\n",
     "In this first notebook, you learned how to:\n",
     "\n",
-    "- [ ] Register a model within the ValidMind Platform\n",
-    "- [ ] Install and initialize the ValidMind Library\n",
-    "- [ ] Preview the documentation template for your model\n",
-    "- [ ] Explore the available tests offered by the ValidMind Library"
+    "- [x] Register a model within the ValidMind Platform\n",
+    "- [x] Install and initialize the ValidMind Library\n",
+    "- [x] Preview the documentation template for your model\n",
+    "- [x] Explore the available tests offered by the ValidMind Library"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29781eb4",
+   "id": "a262f940",
    "metadata": {},
    "source": [
     "<a id='toc7_'></a>\n",
@@ -388,7 +407,7 @@
     "\n",
     "### Start the model development process\n",
     "\n",
-    "Now that the ValidMind Library is connected to your model in the ValidMind Library with the correct template applied, we can go ahead and start the model development process: **[102 Start the model development process](102-start_development_process.ipynb)**"
+    "Now that the ValidMind Library is connected to your model in the ValidMind Library with the correct template applied, we can go ahead and start the model development process: **[2 — Start the model development process](2-start_development_process.ipynb)**"
    ]
   }
  ],
