--- a/site/notebooks/EXECUTED/model_development/3-integrate_custom_tests.ipynb
+++ b/site/notebooks/EXECUTED/model_development/3-integrate_custom_tests.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ValidMind for model development — 103 Integrate custom tests\n",
+    "# ValidMind for model development 3 — Integrate custom tests\n",
     "\n",
     "Learn how to use ValidMind for your end-to-end model documentation process with our series of four introductory notebooks. In this third notebook, supplement ValidMind tests with your own and include them as additional evidence in your documentation.\n",
     "\n",
@@ -65,22 +65,20 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "In order to log test results or evidence to your model documentation with this notebook, you'll need to first have:\n",
+    "In order to integrate custom tests with your model documentation with this notebook, you'll need to first have:\n",
     "\n",
-    "- [ ] Registered a model within the ValidMind Platform with a predefined documentation template\n",
-    "- [ ] Installed the ValidMind Library in your local environment, allowing you to access all its features\n",
-    "- [ ] Learned how to import and initialize datasets for use with ValidMind\n",
-    "- [ ] Understood the basics of how to run and log tests with ValidMind\n",
-    "- [ ] Inserted a test-driven block for the results of your `HighPearsonCorrelation:balanced_raw_dataset` test into your model's documentation\n",
+    "- [x] Registered a model within the ValidMind Platform with a predefined documentation template\n",
+    "- [x] Installed the ValidMind Library in your local environment, allowing you to access all its features\n",
+    "- [x] Learned how to import and initialize datasets for use with ValidMind\n",
+    "- [x] Understood the basics of how to run and log tests with ValidMind\n",
+    "- [x] Inserted a test-driven block for the results of your `HighPearsonCorrelation:balanced_raw_dataset` test into your model's documentation\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Need help with the above steps?</b></span>\n",
     "<br></br>\n",
     "Refer to the first two notebooks in this series:\n",
     "\n",
-    "<ol>\n",
-    "    <li><a href=\"101-set_up_validmind.ipynb\" style=\"color: #DE257E;\"><b>101 Set up ValidMind</b></a></li>\n",
-    "    <li><a href=\"102-start_development_process.ipynb\" style=\"color: #DE257E;\"><b>102 Start the model development process</b></a></li>\n",
-    "</ol>\n",
+    "- <a href=\"1-set_up_validmind.ipynb\" style=\"color: #DE257E;\"><b>1 — Set up the ValidMind Library</b></a>\n",
+    "- <a href=\"2-start_development_process.ipynb\" style=\"color: #DE257E;\"><b>2 — Start the model development process</b></a>\n",
     "\n",
     "</div>\n"
    ]
@@ -93,7 +91,7 @@
     "\n",
     "## Setting up\n",
     "\n",
-    "This section should be quite familiar to you — as we performed the same actions in the previous notebook, **[102 Start the model development process](102-start_development_process.ipynb)**."
+    "This section should be quite familiar to you — as we performed the same actions in the previous notebook, **[2 — Start the model development process](2-start_development_process.ipynb)**."
    ]
   },
   {
@@ -342,18 +340,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "# Split the processed dataset into train and test\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Split the input and target variables\n",
-    "X = balanced_raw_no_age_df.drop(\"Exited\", axis=1)\n",
-    "y = balanced_raw_no_age_df[\"Exited\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X,\n",
-    "    y,\n",
-    "    test_size=0.2,\n",
-    "    random_state=42,\n",
-    ")\n",
+    "train_df, test_df = train_test_split(balanced_raw_no_age_df, test_size=0.20)\n",
+    "\n",
+    "X_train = train_df.drop(\"Exited\", axis=1)\n",
+    "y_train = train_df[\"Exited\"]\n",
+    "X_test = test_df.drop(\"Exited\", axis=1)\n",
+    "y_test = test_df[\"Exited\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Logistic Regression grid params\n",
     "log_reg_params = {\n",
@@ -389,11 +393,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = X_train\n",
-    "train_df[\"Exited\"] = y_train\n",
-    "test_df = X_test\n",
-    "test_df[\"Exited\"] = y_test\n",
-    "\n",
     "# Initialize the datasets into their own dataset objects\n",
     "vm_train_ds = vm.init_dataset(\n",
     "    input_id=\"train_dataset_final\",\n",
@@ -627,7 +626,7 @@
     "- Since these are `VMDataset` or `VMModel` inputs, they have a special meaning.\n",
     "- When declaring a `dataset`, `model`, `datasets` or `models` argument in a custom test function, the ValidMind Library will expect these get passed as `inputs` to `run_test()` or `run_documentation_tests()`.\n",
     "\n",
-    "Re-running the confusion matrix with `normalize=True` looks like this:\n"
+    "Re-running the confusion matrix with `normalize=True` and our testing dataset looks like this:\n"
    ]
   },
   {
@@ -640,7 +639,7 @@
     "result = vm.tests.run_test(\n",
     "    \"my_custom_tests.ConfusionMatrix:test_dataset_normalized\",\n",
     "    inputs={\"model\": vm_model, \"dataset\": vm_test_ds},\n",
-    "    params={\"normalize\": True},\n",
+    "    params={\"normalize\": True}\n",
     ")"
    ]
   },
@@ -652,7 +651,7 @@
     "\n",
     "### Log the confusion matrix results\n",
     "\n",
-    "As we learned in **[102 Start the model development process](102-start_development_process.ipynb)** under **Documenting results** > **Run and log an individual tests**, you can log any result to the ValidMind Platform with the [`.log()` method](https://docs.validmind.ai/validmind/validmind/vm_models.html#TestResult.log) of the result object, allowing you to then add the result to the documentation.\n",
+    "As we learned in **[2 — Start the model development process](2-start_development_process.ipynb)** under **Documenting results** > **Run and log an individual tests**, you can log any result to the ValidMind Platform with the [`.log()` method](https://docs.validmind.ai/validmind/validmind/vm_models.html#TestResult.log) of the result object, allowing you to then add the result to the documentation.\n",
     "\n",
     "You can now do the same for the confusion matrix results:\n"
    ]
@@ -735,9 +734,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After running the command above, confirm that the new `my_tests` directory was created successfully:\n",
+    "After running the command above, confirm that a new `my_tests` directory was created successfully. For example:\n",
     "\n",
-    "<img src= \"my_tests_directory.png\" alt=\"Screenshot showing the new `my_tests` directory\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">"
+    "```\n",
+    "~/notebooks/tutorials/model_development/my_tests/\n",
+    "```"
    ]
   },
   {
@@ -781,8 +782,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [ ] Confirm that the `save()` method saved the `confusion_matrix` function to a file named `ConfusionMatrix.py` in the `my_tests` folder.\n",
-    "- [ ] Note that the new file provides some context on the origin of the test, which is useful for traceability:\n",
+    "- [x] Confirm that the `save()` method saved the `confusion_matrix` function to a file named `ConfusionMatrix.py` in the `my_tests` folder.\n",
+    "- [x] Note that the new file provides some context on the origin of the test, which is useful for traceability:\n",
     "\n",
     "    ```\n",
     "    # Saved from __main__.confusion_matrix\n",
@@ -790,7 +791,7 @@
     "    # New Test ID: <test_provider_namespace>.ConfusionMatrix\n",
     "    ```\n",
     "\n",
-    "- [ ]  Additionally, the new test function has been stripped off its decorator, as it now resides in a file that will be loaded by the test provider:\n",
+    "- [x]  Additionally, the new test function has been stripped off its decorator, as it now resides in a file that will be loaded by the test provider:\n",
     "\n",
     "    ```python\n",
     "    def ConfusionMatrix(dataset, model, normalize=False):\n",
@@ -808,7 +809,7 @@
     "Now that your `my_tests` folder has a sample custom test, let's initialize a test provider that will tell the ValidMind Library where to find your custom tests:\n",
     "\n",
     "- ValidMind offers out-of-the-box test providers for local tests (tests in a folder) or a Github provider for tests in a Github repository.\n",
-    "- You can also create your own test provider by creating a class that has a [`load_test` method](https://docs.validmind.ai/validmind/validmind/tests.html#TestProvider.load_test) that takes a test ID and returns the test function matching that ID.\n",
+    "- You can also create your own test provider by creating a class that has a [`load_test` method](https://docs.validmind.ai/validmind/validmind/tests.html#load_test) that takes a test ID and returns the test function matching that ID.\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Want to learn more about test providers?</b></span>\n",
     "<br></br>\n",
@@ -862,7 +863,7 @@
     "- For tests that reside in a test provider directory, the test ID will be the `namespace` specified when registering the provider, followed by the path to the test file relative to the tests folder.\n",
     "- For example, the Confusion Matrix test we created earlier will have the test ID `my_test_provider.ConfusionMatrix`. You could organize the tests in subfolders, say `classification` and `regression`, and the test ID for the Confusion Matrix test would then be `my_test_provider.classification.ConfusionMatrix`.\n",
     "\n",
-    "Let's go ahead and re-run the confusion matrix test by using the test ID `my_test_provider.ConfusionMatrix`. This should load the test from the test provider and run it as before.\n"
+    "Let's go ahead and re-run the confusion matrix test with our testing dataset by using the test ID `my_test_provider.ConfusionMatrix`. This should load the test from the test provider and run it as before.\n"
    ]
   },
   {
@@ -905,7 +906,7 @@
     "\n",
     "2. In the left sidebar that appears for your model, click **Documentation**.\n",
     "\n",
-    "3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.\n",
+    "3. Locate the Data Preparation section and click on **3.2. Model Evaluation** to expand that section.\n",
     "\n",
     "4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.\n",
     "\n",
@@ -922,7 +923,7 @@
     "\n",
     "6. Finally, click **Insert 2 Test Results to Document** to add the test results to the documentation.\n",
     "\n",
-    "    Confirm that the two individual results for the confusion matrix tests have been correctly inserted into section **3.2 Model Evaluation** of the documentation."
+    "    Confirm that the two individual results for the confusion matrix tests have been correctly inserted into section **3.2. Model Evaluation** of the documentation."
    ]
   },
   {
@@ -935,10 +936,10 @@
     "\n",
     "In this third notebook, you learned how to:\n",
     "\n",
-    "- [ ] Implement a custom inline test\n",
-    "- [ ] Run and log your custom inline tests\n",
-    "- [ ] Use external custom test providers\n",
-    "- [ ] Run and log tests from your custom test providers"
+    "- [x] Implement a custom inline test\n",
+    "- [x] Run and log your custom inline tests\n",
+    "- [x] Use external custom test providers\n",
+    "- [x] Run and log tests from your custom test providers"
    ]
   },
   {
@@ -958,7 +959,7 @@
     "\n",
     "### Finalize testing and documentation\n",
     "\n",
-    "Now that you're proficient at using the ValidMind Library to run and log tests, let's put the last pieces in place to prepare our fully documented sample model for review: **[104 Finalize testing and documentation](104-finalize_testing_documentation.ipynb)**"
+    "Now that you're proficient at using the ValidMind Library to run and log tests, let's put the last pieces in place to prepare our fully documented sample model for review: **[4 — Finalize testing and documentation](4-finalize_testing_documentation.ipynb)**"
    ]
   }
  ],
