--- a/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
+++ b/site/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ValidMind for model development — 104 Finalize testing and documentation\n",
+    "# ValidMind for model development 4 — Finalize testing and documentation\n",
     "\n",
     "Learn how to use ValidMind for your end-to-end model documentation process with our introductory notebook series. In this last notebook, finalize the testing and documentation of your model and have a fully documented sample model ready for review.\n",
     "\n",
-    "We'll first use [`run_documentation_tests()`](https://docs.validmind.ai/validmind/validmind.html#run_documentation_tests) previously covered in **[102 Start the model development process](102-start_development_process.ipynb)** to ensure that your custom test results generated in **[103 Integrate custom tests](103-integrate_custom_tests.ipynb)** are included in your documentation. Then, we'll view and update the configuration for the entire model documentation template to suit your needs.\n"
+    "We'll first use [`run_documentation_tests()`](https://docs.validmind.ai/validmind/validmind.html#run_documentation_tests) previously covered in **[2 — Start the model development process](2-start_development_process.ipynb)** to ensure that your custom test results generated in **[3 — Integrate custom tests](3-integrate_custom_tests.ipynb)** are included in your documentation. Then, we'll view and update the configuration for the entire model documentation template to suit your needs.\n"
    ]
   },
   {
@@ -61,24 +61,22 @@
     "\n",
     "In order to finalize the testing and documentation for your sample model, you'll need to first have:\n",
     "\n",
-    "- [ ] Registered a model within the ValidMind Platform with a predefined documentation template\n",
-    "- [ ] Installed the ValidMind Library in your local environment, allowing you to access all its features\n",
-    "- [ ] Learned how to import and initialize datasets for use with ValidMind\n",
-    "- [ ] Learned how to run and log default and custom tests with ValidMind, including from external test providers\n",
-    "- [ ] Inserted test-driven blocks for the results of the following tests into your model's documentation:\n",
-    "    - [ ] `HighPearsonCorrelation:balanced_raw_dataset`\n",
-    "    - [ ] `my_test_provider.ConfusionMatrix`\n",
-    "    - [ ] `my_custom_tests.ConfusionMatrix:test_dataset_normalized`\n",
+    "- [x] Registered a model within the ValidMind Platform with a predefined documentation template\n",
+    "- [x] Installed the ValidMind Library in your local environment, allowing you to access all its features\n",
+    "- [x] Learned how to import and initialize datasets for use with ValidMind\n",
+    "- [x] Learned how to run and log default and custom tests with ValidMind, including from external test providers\n",
+    "- [x] Inserted test-driven blocks for the results of the following tests into your model's documentation:\n",
+    "    - [x] `HighPearsonCorrelation:balanced_raw_dataset`\n",
+    "    - [x] `my_test_provider.ConfusionMatrix`\n",
+    "    - [x] `my_custom_tests.ConfusionMatrix:test_dataset_normalized`\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Need help with the above steps?</b></span>\n",
     "<br></br>\n",
     "Refer to the first three notebooks in this series:\n",
     "\n",
-    "<ol>\n",
-    "    <li><a href=\"101-set_up_validmind.ipynb\" style=\"color: #DE257E;\"><b>101 Set up ValidMind</b></a></li>\n",
-    "    <li><a href=\"102-start_development_process.ipynb\" style=\"color: #DE257E;\"><b>102 Start the model development process</b></a></li>\n",
-    "    <li><a href=\"103-integrate_custom_tests.ipynb\" style=\"color: #DE257E;\"><b>103 Integrate custom tests</b></a></li>\n",
-    "</ol>\n",
+    "- <a href=\"1-set_up_validmind.ipynb\" style=\"color: #DE257E;\"><b>1 — Set up the ValidMind Library</b></a>\n",
+    "- <a href=\"2-start_development_process.ipynb\" style=\"color: #DE257E;\"><b>2 — Start the model development process</b></a>\n",
+    "- <a href=\"3-integrate_custom_tests.ipynb\" style=\"color: #DE257E;\"><b>3 — Integrate custom tests</b></a>\n",
     "\n",
     "</div>"
    ]
@@ -148,7 +146,7 @@
     "\n",
     "### Import sample dataset\n",
     "\n",
-    "Next, we'll import the same public [Bank Customer Churn Prediction](https://www.kaggle.com/datasets/shantanudhakadd/bank-customer-churn-prediction) dataset from Kaggle we used in the last notebook so that we have something to work with:"
+    "Next, we'll import the same public [Bank Customer Churn Prediction](https://www.kaggle.com/datasets/shantanudhakadd/bank-customer-churn-prediction) dataset from Kaggle we used in the last notebooks so that we have something to work with:"
    ]
   },
   {
@@ -340,18 +338,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "# Split the processed dataset into train and test\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Split the input and target variables\n",
-    "X = balanced_raw_no_age_df.drop(\"Exited\", axis=1)\n",
-    "y = balanced_raw_no_age_df[\"Exited\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X,\n",
-    "    y,\n",
-    "    test_size=0.2,\n",
-    "    random_state=42,\n",
-    ")\n",
+    "train_df, test_df = train_test_split(balanced_raw_no_age_df, test_size=0.20)\n",
+    "\n",
+    "X_train = train_df.drop(\"Exited\", axis=1)\n",
+    "y_train = train_df[\"Exited\"]\n",
+    "X_test = test_df.drop(\"Exited\", axis=1)\n",
+    "y_test = test_df[\"Exited\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Logistic Regression grid params\n",
     "log_reg_params = {\n",
@@ -387,11 +391,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = X_train\n",
-    "train_df[\"Exited\"] = y_train\n",
-    "test_df = X_test\n",
-    "test_df[\"Exited\"] = y_test\n",
-    "\n",
     "# Initialize the datasets into their own dataset objects\n",
     "vm_train_ds = vm.init_dataset(\n",
     "    input_id=\"train_dataset_final\",\n",
@@ -638,7 +637,7 @@
     "\n",
     "Let's run all tests in the Model Evaluation section of the documentation. Note that we have been running the sample custom confusion matrix with `normalize=True` to demonstrate the ability to provide custom parameters.\n",
     "\n",
-    "In the **Run the model evaluation tests** section of **[102 Start the model development process](102-start_development_process.ipynb)**, you learned how to assign inputs to individual tests with [`run_documentation_tests()`](https://docs.validmind.ai/validmind/validmind.html#run_documentation_tests). Assigning parameters is similar, you only need to provide assign a `params` dictionary to a given test ID, `my_test_provider.ConfusionMatrix` in this case.\n"
+    "In the **Run the model evaluation tests** section of **[2 — Start the model development process](2-start_development_process.ipynb)**, you learned how to assign inputs to individual tests with [`run_documentation_tests()`](https://docs.validmind.ai/validmind/validmind.html#run_documentation_tests). Assigning parameters is similar, you only need to provide assign a `params` dictionary to a given test ID, `my_test_provider.ConfusionMatrix` in this case.\n"
    ]
   },
   {
@@ -864,9 +863,9 @@
     "\n",
     "In this final notebook, you learned how to:\n",
     "\n",
-    "- [ ] Refresh the connection from the ValidMind Library to the ValidMind Platform after you've inserted test-driven blocks to your documentation\n",
-    "- [ ] Include custom test results in your model documentation\n",
-    "- [ ] View and configure the configuration for your model documentation template\n",
+    "- [x] Refresh the connection from the ValidMind Library to the ValidMind Platform after you've inserted test-driven blocks to your documentation\n",
+    "- [x] Include custom test results in your model documentation\n",
+    "- [x] View and configure the configuration for your model documentation template\n",
     "\n",
     "With our ValidMind for model development series of notebooks, you learned how to document a model end-to-end with the ValidMind Library by running through some common scenarios in a typical model development setting:\n",
     "\n",
@@ -929,6 +928,7 @@
     "#### More how-to guides and code samples\n",
     "\n",
     "- [Explore available tests in detail](../../how_to/explore_tests.ipynb)\n",
+    "- [In-depth guide on running dataset based tests](../../how_to/run_tests/1_run_dataset_based_tests.ipynb)\n",
     "- [In-depth guide for implementing custom tests](../../code_samples/custom_tests/implement_custom_tests.ipynb)\n",
     "- [In-depth guide to external test providers](../../code_samples/custom_tests/integrate_external_test_providers.ipynb)\n",
     "- [Configuring dataset features](../../how_to/configure_dataset_features.ipynb)\n",
